<resources>
    <string name="app_name">U3T2ImplicitIntents</string>
    <string name="et_uri">https://developer.android.com</string>
    <string name="bt_open_uri">Open Website</string>
    <string name="et_location">Pont Fernando Reig</string>
    <string name="bt_open_location">Open Location</string>
    <string name="et_text">This is the text I wanna share</string>
    <string name="bt_share_text">Share This Text</string>
</resources>